# TP1-IFT630

./: .gitignore  CMakeLists.txt  README.md  barber_sem.cpp  mailbox.h  mailboxDemo.cpp  mailboxMain.cpp  monitor.h  philo_monitor.cpp  philo_monitor.h  philo_sem.cpp  philo_sem.h  philosophers.cpp  philosophers.h  receiver.h  roller_coaster_monitor.cpp  roller_coaster_sem.cpp  sender.h  utils.h
barber/: barber_sem.cpp
philosopher/: philo_monitor.cpp  philo_monitor.h  philo_sem.cpp  philo_sem.h
roller_coaster/: roller_coaster_messages.cpp  roller_coaster_monitor.cpp  roller_coaster_sem.cpp
sync_primitives/: comm_channel.h  monitor.h  semaphore.h
